# edmonbrain

./: .gitignore  .pdm-python  LICENSE  README.md  cloudbuild.yaml  cloudbuild_cloudrun.yaml  cloudbuild_cloudrun_qa.yaml  config.json  debugger.py  pyproject.toml  slack_config.json
bigquery/: qna_history.sql  unstructured_enterprise_schema.json
chunker/: README.md  app.py  batch.py  cloudbuild_cloudrun_chunker.yaml  googledrive_patch.py  loaders.py  pdfs.py  publish_to_pubsub_embed.py  requirements.txt  structured_data_load.py
discord-bot/: README.md  bot.py  config.json  discord_helpers.py  requirements.txt
dreamer/: README.md  app.py  cloudbuild_cloudrun_dream.yaml  discovery-engine.py  dream.py  query.sql  query_random.sql  requirements.txt
embedder/: app.py  cloudbuild_cloudrun_embedder.yaml  pubsub_chunk_to_store.py
gchat/: app.py  cloudbuild_cloudrun_gchat.yaml  gchat_help.py  requirements.txt
prebuild/: Dockerfile  requirements.txt
qna/: README.md  agent.py  app.py  archive.py  cloudbuild_cloudrun_qa.yaml  database.py  googledrive_patch.py  llm.py  loaders.py  pdfs.py  publish_to_pubsub_embed.py  pubsub_chunk_to_store.py  pubsub_manager.py  question_service.py  requirements.txt  self_query.py  self_query_discovery_engine.py  streaming.py  summarise.py
slack/: app.py  cloudbuild_cloudrun_slack.yaml  requirements.txt  slack_config.json  slack_help.py
unstructured/: Dockerfile  cloudbuild_unstructured.yaml  entrypoint.sh
utils/: config.py  gcp.py
webapp/: README.md  app.py  bot_help.py  cloudbuild_cloudrun.yaml  gchat_help.py  requirements.txt
(+4 files in other folders)
